force-app/main/default/objects/Asset/fields/Asset_Condition__c.field-meta.xml
<CustomField>
    <fullName>Asset_Condition__c</fullName>
    <label>Asset Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good working condition</fullName>
            </value>
            <value>
                <fullName>Not working</fullName>
            </value>
            <value>
                <fullName>Obsolete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>