force-app/main/default/objects/Asset/fields/Asset_Condition_Comments__c.field-meta.xml
<CustomField>
    <fullName>Asset_Condition_Comments__c</fullName>
    <label>Asset Condition Comments</label>
    <type>TextArea</type>
</CustomField>